--- a/web/styles/results/progress-operation-style.css
+++ b/web/styles/results/progress-operation-style.css
@@ -11,11 +11,18 @@
     background: transparent;
   }
   
-  .mainbox p {
+  .mainbox p.second {
       text-align: center;
       font-size: 2rem;
       background-color: transparent;
     }
+
+    .mainbox p.special {
+        text-align: center;
+        font-size: 4rem;
+        background-color: transparent;
+        font-weight: 700;
+      }
 
     .name-type{
         margin-top: 5%;
