--- a/web/templates/progress-operation.html
+++ b/web/templates/progress-operation.html
@@ -4,8 +4,8 @@
         <img class="loading" src="/web/static/img/loading.svg">
     </div>
     <div class="mainbox">
-        <p>Запрос еще выполняется.</p>
-        <p>Попробуйте обновить страницу позже.</p>
+        <p class="special">ЗАПРОС ЕЩЕ ВЫПОЛНЯЕТСЯ.</p>
+        <p class="second">Попробуйте обновить страницу позже.</p>
     </div>
 </div>
 {{template "footer.html" .}}
