--- a/web/styles/text-processing-style.css
+++ b/web/styles/text-processing-style.css
@@ -90,3 +90,44 @@
   .template, .area {
     background: transparent;
   }
+
+.popup {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 300px;
+  background-color: #485867b6;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  z-index: 1000;
+  color: white;
+  display: none;
+}
+
+.popup p {
+  margin: 0 0 10px;
+}
+
+#closePopup {
+  background-color: #2b3845;
+  color: white; 
+  border: none; 
+  padding: 10px 15px; 
+  border-radius: 5px; 
+  cursor: pointer; 
+  transition: background-color 0.3s; 
+}
+
+#closePopup:hover {
+  background-color: #2b3845; 
+}
+
+#closePopup:focus {
+  outline: none; 
+}
+
+a {
+  color: rgb(0, 255, 208); 
+  font-weight: bold;
+  background: transparent !important;
+}
