--- a/web/templates/text-processing-page.html
+++ b/web/templates/text-processing-page.html
@@ -1,5 +1,9 @@
 {{template "header.html" .}}
 <div class="work-group">
+    <div class="popup" id="popup" style="display:none;">
+        <p id="popupMessage">Здесь будет ваше сообщение.</p>
+        <button id="closePopup">Закрыть</button>
+      </div>
     <div class="input-text-group">
         <textarea class="output-area" id="inputArea" placeholder="Введите сюда текст"></textarea>
         <div class="input-text-area">
