--- a/web/templates/recognition-page.html
+++ b/web/templates/recognition-page.html
@@ -2,6 +2,7 @@
 <div class="work-group">
     <div class="popup" id="popup" style="display:none;">
       <p id="popupMessage">Здесь будет ваше сообщение.</p>
+      <button id="copyLinkButton">Скопировать</button>
       <button id="closePopup">Закрыть</button>
     </div>
     <div class="file-group">
