--- a/web/styles/text-processing-style.css
+++ b/web/styles/text-processing-style.css
@@ -1,4 +1,14 @@
-  
+@keyframes slideIn {
+  from {
+      transform: translateY(100%); /* Начальная позиция - ниже */
+      opacity: 0; /* Начальная непрозрачность */
+  }
+  to {
+      transform: translateY(0); /* Конечная позиция - на месте */
+      opacity: 1; /* Конечная непрозрачность */
+  }
+}
+
 .work-group{
     display: grid;
     background-color: transparent;
@@ -102,6 +112,7 @@
   z-index: 1000;
   color: white;
   display: none;
+  animation: slideIn 0.5s forwards;
 }
 
 .popup p {
