--- a/web/templates/recognition-page.html
+++ b/web/templates/recognition-page.html
@@ -2,8 +2,8 @@
 <div class="work-group">
     <div class="popup" id="popup" style="display:none;">
       <p id="popupMessage">Здесь будет ваше сообщение.</p>
-      <button id="copyLinkButton">Скопировать</button>
-      <button id="closePopup">Закрыть</button>
+      <button id="copyLinkButton" class="copy-link-button">Скопировать</button>
+      <button id="closePopup" class="closePopup">Закрыть</button>
     </div>
     <div class="file-group">
       <input type="file" class="input-field" name="filePath" id="fileInput" accept="audio/*,video/*, .flv, .mkv, .aac">
