--- a/web/templates/image-generation-page.html
+++ b/web/templates/image-generation-page.html
@@ -2,8 +2,9 @@
 <div class="work-group">
     <div class="popup" id="popup" style="display:none;">
         <p id="popupMessage">Здесь будет ваше сообщение.</p>
-        <button id="closePopup">Закрыть</button>
-    </div>
+        <button id="copyLinkButton" class="copy-link-button">Скопировать</button>
+        <button id="closePopup" class="closePopup">Закрыть</button>
+      </div>
     <div class="input-group">
         <div class="promt-area">
         <textarea class="input-area" id="inputArea" placeholder="Введите текст для генерации изображения"></textarea>
