--- a/web/templates/text-processing-page.html
+++ b/web/templates/text-processing-page.html
@@ -2,7 +2,8 @@
 <div class="work-group">
     <div class="popup" id="popup" style="display:none;">
         <p id="popupMessage">Здесь будет ваше сообщение.</p>
-        <button id="closePopup">Закрыть</button>
+        <button id="copyLinkButton" class="copy-link-button">Скопировать</button>
+        <button id="closePopup" class="closePopup">Закрыть</button>
       </div>
     <div class="input-text-group">
         <textarea class="output-area" id="inputArea" placeholder="Введите сюда текст"></textarea>
