--- a/web/styles/recognition-style.css
+++ b/web/styles/recognition-style.css
@@ -137,22 +137,26 @@
 }
 
 #closePopup {
-  background-color: #2b3845;
-  color: white; 
-  border: none; 
-  padding: 10px 15px; 
-  border-radius: 5px; 
-  cursor: pointer; 
+  width: 100px;           
+  height: 40px;           
+  padding: 10px 15px;     
+  border: #2b3845; 
+  background-color: #2b3845; 
+  color: white;           
+  cursor: pointer;        
+  box-sizing: border-box; 
   transition: background-color 0.3s; 
 }
 
 #copyLinkButton {
-  background-color: #2b3845;
-  color: white; 
-  border: none; 
-  padding: 10px 15px; 
-  border-radius: 5px; 
-  cursor: pointer; 
+  width: 100px;           
+  height: 40px;           
+  padding: 10px 15px;     
+  border: #2b3845; 
+  background-color: #2b3845; 
+  color: white;           
+  cursor: pointer;        
+  box-sizing: border-box; 
   transition: background-color 0.3s; 
 }
 
