--- a/web/styles/text-processing-style.css
+++ b/web/styles/text-processing-style.css
@@ -101,44 +101,66 @@
     background: transparent;
   }
 
-.popup {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  width: 300px;
-  background-color: #485867b6;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 30px;
-  z-index: 1000;
-  color: white;
-  display: none;
-  animation: slideIn 0.5s forwards;
-}
-
-.popup p {
-  margin: 0 0 10px;
-}
-
-#closePopup {
-  background-color: #2b3845;
-  color: white; 
-  border: none; 
-  padding: 10px 15px; 
-  border-radius: 5px; 
-  cursor: pointer; 
-  transition: background-color 0.3s; 
-}
-
-#closePopup:hover {
-  background-color: #2b3845; 
-}
-
-#closePopup:focus {
-  outline: none; 
-}
-
-a {
-  color: rgb(0, 255, 208); 
-  font-weight: bold;
-  background: transparent !important;
-}
+  .none-display{
+    display: none;
+  }
+  
+  .popup {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 300px;
+    background-color: #485867b6;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    z-index: 1000;
+    color: white;
+    display: none;
+    animation: slideIn 0.5s forwards;
+  }
+  
+  .popup p {
+    margin: 0 0 10px;
+  }
+  
+  #closePopup {
+    width: 100px;           
+    height: 40px;           
+    padding: 10px 15px;     
+    border: #2b3845; 
+    background-color: #2b3845; 
+    color: white;           
+    cursor: pointer;        
+    box-sizing: border-box; 
+    transition: background-color 0.3s; 
+  }
+  
+  #copyLinkButton {
+    width: 100px;           
+    height: 40px;           
+    padding: 10px 15px;     
+    border: #2b3845; 
+    background-color: #2b3845; 
+    color: white;           
+    cursor: pointer;        
+    box-sizing: border-box; 
+    transition: background-color 0.3s; 
+  }
+  
+  #copyLinkButton:hover{
+    background-color: #9f9f9f;
+  }
+  
+  #closePopup:hover {
+    background-color: #9f9f9f; 
+  }
+  
+  #closePopup:focus {
+    outline: none; 
+  }
+  
+  a {
+    color: rgb(0, 255, 208); 
+    font-weight: bold;
+    background: transparent !important;
+  }
