--- a/web/templates/text-rewriting-page.html
+++ b/web/templates/text-rewriting-page.html
@@ -1,5 +1,10 @@
 {{template "header.html" .}}
 <div class="work-group">
+    <div class="popup" id="popup" style="display:none;">
+        <p id="popupMessage">Здесь будет ваше сообщение.</p>
+        <button id="copyLinkButton" class="copy-link-button">Скопировать</button>
+        <button id="closePopup" class="closePopup">Закрыть</button>
+      </div>
     <div class="input-text-group">
         <textarea class="output-area" id="inputArea" placeholder="Введите сюда текст"></textarea>
     </div>
