--- a/web/styles/image-generation-style.css
+++ b/web/styles/image-generation-style.css
@@ -8,6 +8,18 @@
       opacity: 1; /* Конечная непрозрачность */
   }
 }
+
+@keyframes slideOut {
+  from {
+      transform: translateY(0); /* Начальная позиция - ниже */
+      opacity: 1; /* Начальная непрозрачность */
+  }
+  to {
+      transform: translateY(100%); /* Конечная позиция - на месте */
+      opacity: 0; /* Конечная непрозрачность */
+  }
+}
+
   .work-group{
     display: grid;
     grid-template-columns: 2fr 0.1fr 3fr;
@@ -236,4 +248,8 @@
     color: rgb(0, 255, 208); 
     font-weight: bold;
     background: transparent !important;
+  }
+
+  .popup.slide-out {
+    animation: slideOut 0.5s forwards;
   }
