Image generation result page bug fixes

--- a/web/templates/image-generation-result.html
+++ b/web/templates/image-generation-result.html
@@ -10,7 +10,7 @@
             </div>
         </div>
         <div class="output-image-group">
-            <img src="{{.image}}">
+            <img src="data:image/png;base64,{{.image}}">
         </div>
     </div>
 {{template "footer.html" .}}
