Image generation result page bug fixes

--- a/web/templates/image-generation-result.html
+++ b/web/templates/image-generation-result.html
@@ -5,8 +5,7 @@
                 <textarea class="output-area" id="inputArea">{{.prompt}}</textarea>
             </div>
             <div class="seed-area">
-                <p>SEED:</p>
-                <p class="seed-align upper-bold">{{.seed}}</p>
+                <p>SEED: {{.seed}}</p>
             </div>
         </div>
         <div class="output-image-group">
