--- a/web/styles/results/image-generation-style.css
+++ b/web/styles/results/image-generation-style.css
@@ -42,7 +42,7 @@
             }
 
             .seed-align{
-                text-align: left;
+                text-align: center;
                 color: rgb(0, 255, 208);
             }
 
