--- a/web/styles/basic/basic.css
+++ b/web/styles/basic/basic.css
@@ -1,4 +1,8 @@
-  
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+
   /* Добавляем оформление элементам grid-контейнера: */
   .container * {
     border-radius: 5px; /* Скругляем углы на 5 пикселей */
@@ -8,10 +12,13 @@
 
  /* Добавляем оформление grid-контейнеру:*/
   .container {
-   width: 90vw;
-   height: 99vh;
-    margin: 0 auto;
-    border-radius: 3px;  /*Скругляем углы на 5 пикселей */
+    display: flex; /* Используем flexbox */
+    justify-content: center; /* Центрируем по горизонтали */
+    width: 94vw; /* Ширина 94% от ширины окна */
+    height: 99vh; /* Высота 99% от высоты окна */
+    margin: 10px auto 0; /* Авто-отступы для центрирования */
+    border-radius: 3px; /* Скругляем углы */
+    box-sizing: border-box; /* Учитываем отступы и границы в ширине и высоте */
   }
   
    /*Параметры grid-контейнера */
@@ -25,14 +32,21 @@
           "a c c" 85%
           ". d d" auto;
     
-    justify-content: start;
+    justify-content: center; /* Центрируем содержимое */
+    padding: 0 20px; /* Устанавливаем одинаковые отступы слева и справа */
+    max-width: 1200px; /* Устанавливаем максимальную ширину контейнера */
+    width: 100%; /* Ширина 100% от родительского элемента */
+    height: 99vh; /* Высота 99% от высоты окна */
+    margin: 10px auto 0; /* Авто-отступы для центрирования */
+    border-radius: 3px; /* Скругляем углы */
+    box-sizing: border-box; /* Учитываем отступы и границы в ширине и высоте */
     
   }
 
 .header-buttons{
   grid-area: a;
-  width: 15vw;
-  max-width: 200px;
+  width: 16vw;
+  max-width: 230px;
 }
 
 .header-group{
