--- a/web/templates/no-operation.html
+++ b/web/templates/no-operation.html
@@ -8,7 +8,7 @@
         <div class="err">4</div>
         <i class="far fa-question-circle fa-spin"></i>
         <div class="err2">4</div>
-        <div class="msg">Запрос с таким ID не найден или вообще не существует.<p>Давайте перейдем <a href="/">на главную.</a></p></div>
+        <div class="msg">Запрос с таким ID не найден или вообще не существует.<p>Давайте перейдем <a href="/">на главную</a>.</p></div>
       </div>
 </div>
 {{template "footer.html" .}}
