--- a/web/templates/recognition-result.html
+++ b/web/templates/recognition-result.html
@@ -2,9 +2,9 @@
 <div class="work-group">
     <div class="filenameurl">
         {{if isValidURL .filename}}
-        <p>Обработан файл: <a href="{{.filename}}" target="_blank">{{.filename}}</a></p>
+        <p>Обработан файл по ссылке: <a href="{{.filename}}" target="_blank">{{.filename}}</a></p>
     {{else}}
-        <p>Обработан файл: {{.filename}}</p>
+        <p>Обработан файл: "{{.filename}}"</p>
     {{end}}    
     </div>    
     <div class="input-text-group">
