--- a/web/styles/image-generation-style.css
+++ b/web/styles/image-generation-style.css
@@ -190,29 +190,63 @@
     display: none;
   }
   
-  .popup {
+  .popup-container {
     position: fixed;
     bottom: 20px;
     right: 20px;
     width: 300px;
-    background-color: #485867b6;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background:none;
     padding: 30px;
     z-index: 1000;
     color: white;
     display: none;
     animation: slideIn 0.5s forwards;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: flex-end;
   }
+
+  .popup {
+    background-color: #485867b6;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    color: white;
+    width: 300px;
+    display: flex;
+    margin-bottom: 5px; /* Отступ между попапами */
+    margin-right: 10px;
+    flex-direction: column; /* Располагаем элементы вертикально */
+    align-items: center; /* Центрируем содержимое по горизонтали */
+    animation: slideIn 0.5s forwards; /* Анимация появления */
+  }
+
+  .popup.slide-out {
+    animation: slideOut 0.5s forwards; /* Анимация исчезновения */
+}
   
   .popup p {
     margin: 0 0 10px;
   }
   
-  #closePopup {
-    width: 80%; /* Ширина 80% от родительского элемента */
+  .button-container {
+    background: none;
+    display: flex; /* Используем flexbox для размещения кнопок в строку */
+    justify-content: space-between; /* Распределяем кнопки по горизонтали */
+    width: 70%; /* Занимаем всю ширину родительского элемента */
+    margin-top: 10px; /* Отступ сверху для разделения от текста */
+    gap: 0;
+  }
+
+  .button-container button {
+    margin: 0; /* Убираем отступы между кнопками */
+  }
+
+  .popup button {
+    flex: 1; /* Кнопки займут равное пространство */
     max-width: 100px; /* Максимальная ширина кнопок */
     height: 40px; /* Фиксированная высота */
-    padding: 10px;     
+    padding: 0px;     
     border: none; 
     background-color: #2b3845; 
     color: white;           
@@ -220,34 +254,16 @@
     box-sizing: border-box; 
     transition: background-color 0.3s; 
     text-align: center; 
+    margin: 0;
   }
-  
-  #copyLinkButton {
-    width: 80%; /* Ширина 80% от родительского элемента */
-    max-width: 100px; /* Максимальная ширина кнопок */
-    height: 40px; /* Фиксированная высота */
-    padding: 10px;     
-    border: none; 
-    background-color: #2b3845; 
-    color: white;           
-    cursor: pointer;        
-    box-sizing: border-box; 
-    transition: background-color 0.3s; 
-    text-align: center; 
-  }
-  
-  
-  #copyLinkButton:hover{
-    background-color: #9f9f9f;
-  }
-  
-  #closePopup:hover {
+
+.popup button:hover {
     background-color: #9f9f9f; 
-  }
-  
-  #closePopup:focus {
+}
+
+.popup button:focus {
     outline: none; 
-  }
+}
   
   a {
     color: rgb(0, 255, 208); 
