--- a/web/templates/image-generation-page.html
+++ b/web/templates/image-generation-page.html
@@ -1,10 +1,7 @@
 {{template "header.html" .}}
 <div class="work-group">
-    <div class="popup" id="popup" style="display:none;">
-        <p id="popupMessage">Здесь будет ваше сообщение.</p>
-        <button id="copyLinkButton" class="copy-link-button">Скопировать</button>
-        <button id="closePopup" class="closePopup">Закрыть</button>
-      </div>
+    <div class="popup-container" id="popupContainer">
+    </div>
     <div class="input-group">
         <div class="promt-area">
         <textarea class="input-area" id="inputArea" placeholder="Введите текст для генерации изображения"></textarea>
