--- a/web/templates/image-generation-page.html
+++ b/web/templates/image-generation-page.html
@@ -1,7 +1,6 @@
 {{template "header.html" .}}
 <div class="work-group">
-    <div class="popup-container" id="popupContainer">
-    </div>
+    <div class="popup-container" id="popupContainer"></div>
     <div class="input-group">
         <div class="promt-area">
         <textarea class="input-area" id="inputArea" placeholder="Введите текст для генерации изображения"></textarea>
