--- a/web/templates/image-generation-result.html
+++ b/web/templates/image-generation-result.html
@@ -10,6 +10,7 @@
         </div>
         <div class="output-image-group">
             <img src="data:image/png;base64,{{.image}}">
+            <a href="data:image/png;base64,{{.image}}" download="image.png">Скачать изображение</a>
         </div>
     </div>
 {{template "footer.html" .}}
