--- a/web/styles/image-generation-style.css
+++ b/web/styles/image-generation-style.css
@@ -36,7 +36,7 @@
 
   .output-image-group{
     display: grid;
-    grid-template-rows: 4fr 0.1fr;
+    grid-template-rows: 4fr 0.1fr 0.1fr;
     row-gap: 1%;
     background: transparent;
   }
