Download Link in image upscale page

--- a/web/templates/image-upscale-page.html
+++ b/web/templates/image-upscale-page.html
@@ -8,6 +8,7 @@
     </div>
     <div class="output-group">
         <img id="image" src="/web/static/img/templates/3-2.png">
+        <a id="downloadLink" href="/web/static/img/templates/3-2.png" download="image.png">Скачать изображение</a>
     </div>
 </div>
 {{template "footer.html" .}}
