--- a/web/styles/results/image-generation-style.css
+++ b/web/styles/results/image-generation-style.css
@@ -49,7 +49,9 @@
     .output-image-group{
         display: flex;
         justify-content: center;
+        flex-direction: column;
         align-items: center;
+        font-size: 20px;
     }
         
         .output-image-group img{
@@ -59,4 +61,9 @@
             max-width: 99%;
             max-height: 80vh;
             margin: 10px;
+        }
+
+        a {
+            background-color: transparent !important; /* Убираем фон */ 
+            margin: 0 0 10px 0;
         }
