--- a/web/styles/results/image-generation-style.css
+++ b/web/styles/results/image-generation-style.css
@@ -52,6 +52,7 @@
         flex-direction: column;
         align-items: center;
         font-size: 20px;
+        font-weight: bold;
     }
         
         .output-image-group img{
@@ -66,4 +67,5 @@
         a {
             background-color: transparent !important; /* Убираем фон */ 
             margin: 0 0 10px 0;
+            color: rgb(0, 255, 208);
         }
