--- a/web/templates/progress-operation.html
+++ b/web/templates/progress-operation.html
@@ -5,7 +5,7 @@
     </div>
     <div class="mainbox">
         <p class="special">ЗАПРОС ЕЩЕ ВЫПОЛНЯЕТСЯ</p>
-        <p class="second">Попробуйте <a href="{{.url}}">обновить</a> страницу позже</p>
+        <p class="second">Попробуйте <a class="repeat-url" href="{{.url}}">обновить</a> страницу позже</p>
         <p class="second">ID вашей операции: {{.id}}</p>
     </div>
 </div>
