--- a/web/templates/image-generation-result.html
+++ b/web/templates/image-generation-result.html
@@ -9,8 +9,8 @@
             </div>
         </div>
         <div class="output-image-group">
-            <img src="data:image/png;base64,{{.image}}">
-            <a href="data:image/png;base64,{{.image}}" download="{{.name}}">Скачать изображение</a>
+            <img src="data:image/jpeg;base64,{{.image}}">
+            <a href="data:image/jpeg;base64,{{.image}}" download="{{.name}}">Скачать изображение</a>
         </div>
     </div>
 {{template "footer.html" .}}
