--- a/web/styles/recognition-style.css
+++ b/web/styles/recognition-style.css
@@ -39,6 +39,7 @@
 }
 
 .language-group{
+  max-height: 36px;
   justify-items: end;
   align-items: center;
   display: flex;
@@ -124,21 +125,27 @@
 .none-display{
   display: none;
 }
+
 .popup-container {
+  display: flex; /* Изменяем на flex для размещения попапов */
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: -100px; /* Изначально скрываем за экраном */
+  right: 20px; /* Расположение от правого края */
   width: 300px;
-  background:none;
+  background: none;
   padding: 30px;
-  z-index: 1000;
   color: white;
-  display: none;
-  animation: slideIn 0.5s forwards;
-  display: flex;
+  transition: bottom 0.5s ease; /* Плавный переход при активации */
   flex-direction: column;
   gap: 5px;
   align-items: flex-end;
+  z-index: 0; /* Убедимся, что контейнер поверх других элементов */
+}
+
+.popup-active {
+  flex: 0;
+  bottom: 5px; /* Позиция при активации */
+  padding: 0px;
 }
 
 .popup {
@@ -146,10 +153,9 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 30px;
   color: white;
-  width: 300px;
+  width: 100%; /* Занимаем всю ширину контейнера */
   display: flex;
-  margin-bottom: 5px; /* Отступ между попапами */
-  margin-right: 10px;
+  margin-bottom: 0px; /* Отступ между попапами */
   flex-direction: column; /* Располагаем элементы вертикально */
   align-items: center; /* Центрируем содержимое по горизонтали */
   animation: slideIn 0.5s forwards; /* Анимация появления */
@@ -200,11 +206,7 @@
 }
 
 a {
-  color: rgb(0, 255, 208); 
+  font-size: 20px;
   font-weight: bold;
   background: transparent !important;
-}
-
-.popup.slide-out {
-  animation: slideOut 0.5s forwards;
 }
