--- a/web/styles/recognition-style.css
+++ b/web/styles/recognition-style.css
@@ -20,6 +20,24 @@
   }
 }
 
+@keyframes slideDOWN {
+  from {
+      transform: translateY(-100%); /* Начальная позиция - ниже */
+  }
+  to {
+      transform: translateY(0); /* Конечная позиция - на месте */
+  }
+}
+
+@keyframes slideUP {
+  from {
+    transform: translateY(0); /* Начальная позиция - ниже */
+}
+to {
+    transform: translateY(-100%); /* Конечная позиция - на месте */
+}
+}
+
 .work-group{
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 20fr;
@@ -74,7 +92,7 @@
 
 .file-group input[type="url"]{
   text-align: left;
-  max-height: 23px;
+  max-height: 32px;
 }
 
 .file-group select{
@@ -158,6 +176,9 @@
   margin-bottom: 0px; /* Отступ между попапами */
   flex-direction: column; /* Располагаем элементы вертикально */
   align-items: center; /* Центрируем содержимое по горизонтали */
+}
+
+.popup.slide-in {
   animation: slideIn 0.5s forwards; /* Анимация появления */
 }
 
@@ -209,4 +230,12 @@ a {
   font-size: 20px;
   font-weight: bold;
   background: transparent !important;
+}
+
+.popup.slide-up {
+  animation: slideUP 0.5s forwards; /* Анимация поднятия */
+}
+
+.popup.slide-down {
+  animation: slideDOWN 0.5s backwards; /* Анимация опускания */
 }
