--- a/web/templates/recognition-result.html
+++ b/web/templates/recognition-result.html
@@ -15,5 +15,7 @@
         <p >Сырой текст</p>
         <textarea class="output-area" id="outputArea">{{.raw_text}}</textarea>
     </div>
+<div class="button-save">
+    <button class="save-button">Сохранить</button>
 </div>
 {{template "footer.html" .}}
