--- a/web/templates/text-processing-result.html
+++ b/web/templates/text-processing-result.html
@@ -12,5 +12,7 @@
         <textarea class="output-area" id="outputArea">{{.new_text}}</textarea>
     </div>
 </div>
-
+<div class="button-save">
+    <button class="save-button">Сохранить</button>
+</div>
 {{template "footer.html" .}}
