--- a/web/styles/results/text-processing-style.css
+++ b/web/styles/results/text-processing-style.css
@@ -62,10 +62,10 @@
         
           .save-button{
             flex: 1;
+            max-height: 40px;
             background-color: #707784;
             border: none;
             color:aliceblue;
-            padding: 15px 32px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
