--- a/web/templates/text-processing-result.html
+++ b/web/templates/text-processing-result.html
@@ -1,18 +1,22 @@
 {{template "header.html" .}}
 <div class="work-group">
+    <script type="text/javascript">
+        var version = {{.version}};
+        var id = {{.id}};
+    </script>
     <div class="input-group">
         <div class="old-text-area">
-            <textarea class="output-area" id="inputArea">{{.old_text}}</textarea>
+            <textarea class="output-area" id="oldTextArea">{{.old_text}}</textarea>
         </div>
         <div class="prompt-area">
-            <textarea class="output-area" id="promtArea">{{.prompt}}</textarea>
+            <textarea class="output-area" id="promptArea">{{.prompt}}</textarea>
         </div>
     </div>
     <div class="output-group">
-        <textarea class="output-area" id="outputArea">{{.new_text}}</textarea>
+        <textarea class="output-area" id="newTextArea">{{.new_text}}</textarea>
     </div>
 </div>
 <div class="button-save">
-    <button class="save-button">Сохранить</button>
+    <button class="save-button" id="saveButton">Сохранить</button>
 </div>
 {{template "footer.html" .}}
