Added Whisper transcription functions

--- a/web/templates/recognition-page.html
+++ b/web/templates/recognition-page.html
@@ -19,6 +19,8 @@
       <button class="button" id="recognizeButton">Расшифровать</button>
     </div>
     <div class="normalize-group">
+      <input type="checkbox" name="whisper" class="checkbox" name="whisper" id="whisper" value="whisper">
+      <label for="whisper" style="margin-right: 100px;"><abbr title="Расшифровка через другую модель распознавания">Whisper</abbr></label>
       <input type="checkbox" name="dialog" class="checkbox" name="check" id="dialog" value="dialog">
       <label for="dialog" style="margin-right: 30px;"><abbr title="Включить, если необходимо разделение голосов ДВУХ разных людей">Диалог</abbr></label>
       <input type="checkbox" name="normalize" class="checkbox" id="normResult" value="norm" checked disabled>
