--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="content-type" content="text/html; charset=utf8" />
   <title>Реальное время / {{.title}}</title>
   <link rel="icon" href="/web/static/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/web/styles/basic/basic.css">
