RSS parser design update

--- a/web/templates/feed.html
+++ b/web/templates/feed.html
@@ -6,8 +6,8 @@
     <hr>
     <p class="description">{{.Description}}</p>
     <div class="info">
-        <p class="author">© <b>{{.Source}}</b></p>
-        <p class="date"><i>{{.Date}}</i></p>
+        <p class="author">© {{.Source}}</p>
+        <p class="date">{{.Date}}</p>
     </div>
 </div>
 {{end}}
