--- a/web/styles/feed-style.css
+++ b/web/styles/feed-style.css
@@ -1,7 +1,8 @@
 .work-group{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 0.5%;
-    grid-template-columns: 1fr 1fr;
+    /*grid-template-columns: repeat(1, 1fr);*/
     overflow-y: auto;
     overflow-x: hidden;
     padding: 5px;
@@ -11,14 +12,14 @@
   .work-group .news-element{
     width: 100%;
     height: auto;
-    padding: 5px;
+    padding: 10px 10px 5px 10px;
     box-sizing:border-box;
-    border: 1px solid black;
-    background-color: rgba(245, 245, 245, 0.629);
-
+    background-color: rgba(245, 245, 245, 0.396);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column; /* Устанавливаем вертикальное направление */
     justify-content: space-between; /* Распределяем пространство между элементами */
+    max-height: 200px;
   }
 
   .news-element *{
@@ -27,19 +28,41 @@
   }
 
   .news-element hr{
-    border: 0.5px solid rgb(63, 63, 63); /* Установите цвет и стиль границы */
     width: 100%; /* Убедитесь, что ширина 100% */
+    border: none; /* Убираем стандартные границы */
+    height: 1px; /* Устанавливаем высоту линии */
+    background-color: rgba(98, 98, 98, 0.67); /* Устанавливаем цвет линии */
   }
 
   .news-element .title{
     margin-top: 5px;
     margin-bottom: 5px;
+    text-transform: uppercase;
+  }
+
+  .news-element .title a, .news-element .title a:hover{
+    color: rgb(39, 39, 39);
+  }
+
+  .news-element .description{
+    margin-top: 8px;  /* Установите нужное значение */
+    margin-bottom: 0px; /* Установите нужное значение */
+    font-style: italic;
+    font-size: 16px;
   }
 
   .news-element .info{
     display: flex;
     justify-content: space-between;
-    margin-bottom: 0px;
-
+    margin-bottom: -2px;
     margin-top: auto; /* Отодвигаем элемент info вниз */
+    font-size: 14px;
+  }
+
+  .news-element .info .author{
+    font-weight: bold;
+  }
+
+  .news-element .info .date{
+    color: rgb(130, 130, 130);
   }
