--- a/web/styles/image-upscale-style.css
+++ b/web/styles/image-upscale-style.css
@@ -20,7 +20,10 @@
 
   .control-group{
     grid-area: control-group;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 5px;
+    background: transparent;
   }
 
   .output-group{
