--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -19,7 +19,7 @@
     <div class="header-buttons">
       <form action="/"><button class="header-button upper-bold" id="filePage">Расшифровка</button></form>
       <form action="/image"><button class="header-button upper-bold" id="imagePage">Генерация изображения</button></form>
-      <form action="/upscale"><button class="header-button upper-bold" id="upscalePage">Увеличение изображения</button></form>
+      <form action="/imgprocess"><button class="header-button upper-bold" id="upscalePage">Обработка изображения</button></form>
       <form action="/text"><button class="header-button upper-bold" id="textPage">Обработка текста</button></form>
       <form action="/news"><button class="header-button upper-bold" id="newsPage">Актуальные новости</button></form>
       <form action="/photopea" method="post" target="_blank"><button class="header-button upper-bold" id="textPage">↪ Онлайн Photoshop</button></form>
