--- a/web/templates/image-upscale-page.html
+++ b/web/templates/image-upscale-page.html
@@ -5,6 +5,7 @@
     </div>
     <div class=control-group>
         <button class="button" id="upscaleButton">Увеличить</button>
+        <button class="button" id="removeBgButton">Удалить фон</button>
     </div>
     <div class="output-group">
         <img id="image" src="/web/static/img/templates/3-2.png">
