New admin page with generated images

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -22,6 +22,7 @@
       <form action="/imgprocess"><button class="header-button upper-bold" id="upscalePage">Обработка изображения</button></form>
       <form action="/text"><button class="header-button upper-bold" id="textPage">Обработка текста</button></form>
       <form action="/news"><button class="header-button upper-bold" id="newsPage">Актуальные новости</button></form>
+      <form action="/media"><button class="header-button upper-bold" id="mediaPage">Новости СМИ</button></form>
       <form action="/photopea" method="post" target="_blank"><button class="header-button upper-bold" id="textPage">↪ Онлайн Photoshop</button></form>
     </div>
     <div class="header-group">
