--- a/web/styles/user-style.css
+++ b/web/styles/user-style.css
@@ -27,7 +27,7 @@
     overflow-y: auto;
     overflow-x: hidden;;
     display: list-item;
-    max-height: 58vh;
+    max-height: 57vh;
 }
 
 .operations .list .elements .element{
@@ -80,4 +80,12 @@
 
 .logoutForm .logoutBtn{
     width: 200px;
+    height: 30px;
+    background-color: #707784;
+    border: none;
+    color: white;
+}
+
+.logoutForm .logoutBtn:hover{
+    background-color: #494E56;
 }
