--- a/web/styles/admin-user.css
+++ b/web/styles/admin-user.css
@@ -31,7 +31,7 @@
 }
 
 .operations .list .elements .element{
-    max-height: 50px;
+    max-height: 60px;
     margin-bottom: 3px;
     box-sizing: border-box;
     display: flex;
@@ -67,4 +67,17 @@
     margin-right: 5px;
     margin-bottom: 5px;
     margin-top: 5px;
+}
+
+.data{
+    width: 50%;
+}
+
+.data a{
+    color: black;
+}
+
+.data p{
+    text-align: left;
+    text-wrap: break-word;
 }
