--- a/web/styles/user-style.css
+++ b/web/styles/user-style.css
@@ -31,7 +31,7 @@
 }
 
 .operations .list .elements .element{
-    max-height: 50px;
+    max-height: 60px;
     margin-bottom: 3px;
     box-sizing: border-box;
     display: flex;
@@ -88,4 +88,17 @@
 
 .logoutForm .logoutBtn:hover{
     background-color: #494E56;
+}
+
+.data{
+    width: 50%;
+}
+
+.data a{
+    color: black;
+}
+
+.data p{
+    text-align: left;
+    text-wrap: pretty;
 }
